force-app/main/default/objects/OM_Log__c/OM_Log__c.object-meta.xml
<CustomObject>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Log name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>