force-app/main/default/objects/OM_Log__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent log group</description>
    <inlineHelpText>Parent log group</inlineHelpText>
    <label>Group</label>
    <referenceTo>OM_LogGroup__c</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>