force-app/main/default/objects/OM_Log__c/fields/LimitDump__c.field-meta.xml
<CustomField>
    <fullName>LimitDump__c</fullName>
    <description>Platform limits dump</description>
    <inlineHelpText>Platform limits dump</inlineHelpText>
    <label>Limit dump</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>