force-app/main/default/objects/OM_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Level__c</columns>
    <columns>RequestType__c</columns>
    <columns>Timestamp__c</columns>
    <columns>Class__c</columns>
    <columns>Method__c</columns>
    <columns>Message__c</columns>
    <columns>LimitDump__c</columns>
    <columns>RequestId__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>